objects/LLC_BI__Service_Mgmt__c.object
<CustomObject>
    <description>This object allows the user to track high level information about a service that also includes lookups and relationships to multiple other objects.</description>
    <fields>
        <fullName>Additional_Info_Included__c</fullName>
        <label>Additional Info Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Contract</fullName>
                </value>
                <value>
                    <fullName>Plans &amp; Specs</fullName>
                </value>
                <value>
                    <fullName>Const Estimates</fullName>
                </value>
                <value>
                    <fullName>Legal Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraiser_Contact_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Appraiser Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CF_Amount_of_Invoice__c</fullName>
        <description>Ability to see and update the amount of invoice on the Service Management Vendor Object</description>
        <label>Amount of Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Appraisal_Review_Region__c</fullName>
        <label>Appraisal Review Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Southeast Region 1</fullName>
                </value>
                <value>
                    <fullName>Southeast Region 2</fullName>
                </value>
                <value>
                    <fullName>Southwest Region 3</fullName>
                </value>
                <value>
                    <fullName>Central Region 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Bank_Appraiser_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To see and search the Bank Appraiser Name.</description>
        <label>Bank Appraiser Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Date_Appraisal_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Appraisal Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_Documents_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Documents Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_Documents_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Documents Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_Invoice_Paid__c</fullName>
        <description>Ability to see and update the date invoice paid on the Service Management Vendor Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Signature_Report__c</fullName>
        <description>It will be on appraisal information section</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Signature &amp; Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Effective_Date_of_Appraisal__c</fullName>
        <description>It will be under appraisal information section</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of Appraisal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Invoice_Status__c</fullName>
        <description>It will determine the status of invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Not Received</fullName>
                </value>
                <value>
                    <fullName>Invoice Not Sent to A/P</fullName>
                </value>
                <value>
                    <fullName>Invoice Sent to A/P</fullName>
                </value>
                <value>
                    <fullName>Invoice Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Mgmt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Mgmt2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Street_Address__c</fullName>
        <formula>LLC_BI__Collateral__r.LLC_BI__Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Today_s_Date__c</fullName>
        <description>It will store the today&apos;s date and will be used in the appraisal review form.</description>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Vendor_Rating_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Rating Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Vendor_Rating__c</fullName>
        <description>Ability to track/record satisfaction of appraisers in Service Management</description>
        <label>Vendor Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unsatisfied</fullName>
                </value>
                <value>
                    <fullName>satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_for_Appraiser__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact for Appraiser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the account that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Account object lookup in this field.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Collateral Mgmt object that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Collateral Mgmt object lookup in this field.</inlineHelpText>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Contact that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Contact object lookup in this field.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>The system populates this required text field to indicate that this is the object being serviced.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the item being serviced.</inlineHelpText>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field to specify the related Service Mgmt object. The default value is blank.</description>
        <inlineHelpText>Enter the related Service Mgmt object lookupKey in this field to determine the related Service Mgmt record.</inlineHelpText>
        <label>Highest</label>
        <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
        <relationshipLabel>Service Mgmts (Highest)</relationshipLabel>
        <relationshipName>Highest_Service_Mgmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Loan being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Loan object lookup in this field.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_Number_Firm__c</fullName>
        <description>Users populate this optional text field to indicate the professional license number for the relationship. For real estate transactions, this field may represent the license number of the mortgage or real estate broker. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the professional license number for the relationship, such as a mortgage or real estate broker license number.</inlineHelpText>
        <label>Professional License Number (Firm)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_Number_Individual__c</fullName>
        <description>Users populate this optional text field to indicate the professional license number for the individual. For real estate transactions, this field may represent the license number of the mortgage or real estate broker. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the professional license number for the individual, such as a mortgage or real estate broker license number.</inlineHelpText>
        <label>Professional License Number (Individual)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_State_Firm__c</fullName>
        <description>Users populate this optional picklist to indicate the state where the relationship is licensed. By default, the field is blank.</description>
        <inlineHelpText>Select the state in which the license is issued for the relationship.</inlineHelpText>
        <label>Professional License State (Firm)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_State_Individual__c</fullName>
        <description>Users populate this optional picklist to indicate the state where the individual&apos;s professional license is issued. By default, the field is blank.</description>
        <inlineHelpText>Select the state in which the professional license is issued for the individual.</inlineHelpText>
        <label>Professional License State (Individual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Contact is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Contact lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Account is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Account lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Type__c</fullName>
        <description>The user populates this picklist field to determine the service type. By default, this field is blank.</description>
        <inlineHelpText>Select the correct Service type.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Third Party Reports</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The user selects this optional picklist field to indicate if the service if active, inactive, or pending. By default, this field is blank.</description>
        <inlineHelpText>Select the appropriate status of the service.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LA Notifies AR</fullName>
                    <default>true</default>
                    <label>LA Notifies AR</label>
                </value>
                <value>
                    <fullName>Appraisal ordered</fullName>
                </value>
                <value>
                    <fullName>Waiting on borrower docs</fullName>
                </value>
                <value>
                    <fullName>Appraisal received</fullName>
                </value>
                <value>
                    <fullName>Questions on appraisal</fullName>
                </value>
                <value>
                    <fullName>Appraisal review complete</fullName>
                </value>
                <value>
                    <fullName>Evaluation to be done</fullName>
                </value>
                <value>
                    <fullName>Evaluation complete</fullName>
                </value>
                <value>
                    <fullName>Appraisal Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Service Mgmt</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Service Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Service_Mgmt_VR_Appraisal_Review_Region</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  $User.No_Validation__c = false,
  IF(  NOT(ISPICKVAL( LLC_BI__Service_Type__c , &apos;Appraiser&apos;)),
      ISCHANGED(CF_Appraisal_Review_Region__c)
      , false ) 
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Service_Type__c</errorDisplayField>
        <errorMessage>Service type should be appraiser to update Appraisal Review Region</errorMessage>
    </validationRules>
</CustomObject>